--- a/products.html
+++ b/products.html
@@ -11,7 +11,7 @@
     <nav class="bg-green-100 p-3 flex items-center justify-between shadow-xl">
         <h1 class="text-2xl">Greenden</h1>
 
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 md:hidden">
+        <svg id="menuIcon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
           
@@ -27,11 +27,31 @@
             </li>
         </ul>
     </nav>
+
+     <!--side navbar-->
+     <section id="sidenav" class="bg-green-100 fixed z-20 top-0 transition-all duration-1000" style="width: 50%; height: 100vh; right: -50%;">
+        <div class="text-right p-5">
+            <p id="closenav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col gap-10 items-center text-gray-600 ">
+            <li>
+                <a class="hover:underline hover:text-black" href="index.html">Home</a>
+            </li>
+
+            <li>
+                <a class="hover:underline hover:text-black" href="products.html">Products</a>
+            </li>
+
+            <li>
+                <a class="hover:underline hover:text-black" href="contact.html">Contact</a>
+            </li>
+        </ul>
+    </section>
          <!--header-->
     <section class="p-4 text-center">
         <h1 class="font-bold mt-5 text-3xl">Our Products</h1>
-        <input type="text" class="border border-black p-2 m-3" style="width: 80%;" placeholder="Search for products">
-        <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
+        <input id="Search" type="text" class="border border-black p-2 m-3" style="width: 80%;" placeholder="Search for products">
+        <div id="productcontainer" class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
             <div>
                 <img src="./images/Untitled design (1).png" class="inline hover:shadow transform hover:-translate-y-2" alt="">
                 <h1>Pink rose</h1>
@@ -80,5 +100,7 @@
         <p>dvlchufb gciuHwydG GDYXI UCIUGIUCGY UHCOUHECUIB UHDIYXGwsiud bcuhn</p>
         <p>@Greenden.com</p>
     </section>
+
+    <script src="products.js"></script>
 </body>
 </html>
